feat: #1 combo meal feature update